yourwebsite_example/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      name: http
      number: 80    
      protocol: HTTP
    hosts:
    - "www.yourwebsite.com"
    - "yourwebsite.com"
    tls:
      httpsRedirect: true  # force everything to be https
  - port:
      name: https-yourwebsite
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: yourwebsite-cert  # must match the Certificate secret name
    hosts:
    - "www.yourwebsite.com"
    - "yourwebsite.com"
